# cppServer

./: README.md  make-all.sh
res/: engine.yaml
src/apps/allinone/: CMakeLists.txt
src/apps/appmgr/: CMakeLists.txt
src/apps/dbmgr/: CMakeLists.txt  dbmgr.vcxproj  mysql_base.cpp  mysql_connector.cpp  mysql_connector.h  mysql_table_update.cpp  mysql_table_update.h
src/apps/game/: CMakeLists.txt  lobby.cpp  world_proxy.cpp
src/apps/login/: CMakeLists.txt  account.cpp  http_request.cpp  http_request.h  login.vcxproj  login_obj_mgr.h  main.cpp  redis_login.cpp
src/apps/space/: CMakeLists.txt  move_component.cpp  move_system.cpp  player_manager_component.cpp  space.h  world.cpp
src/libs/libplayer/: CMakeLists.txt  player.cpp  player_component_last_map.cpp  player_component_last_map.h
src/libs/libresource/: CMakeLists.txt
src/libs/libserver/: CMakeLists.txt  app_type.h  app_type_mgr.h  base_buffer.cpp  cache_refresh.h  check_time_component.h  common.h  component.cpp  component_collections.cpp  component_collections.h  component_help.h  connect_obj.cpp  connect_obj.h  console_efficiency_component.h  efficiency_thread_component.h  entity.cpp  entity.h  entity_system.h  global.h  libserver.vcxproj  log4_help.h  message_system.h  message_system_help.cpp  network.cpp  network.h  network_buffer.cpp  network_buffer.h  network_connector.cpp  network_help.h  network_locator.cpp  network_locator.h  object_pool.h  packet.h  res_path.cpp  robot_state_type.h  server_app.cpp  state_template.h  system_manager.cpp  thread_collector_exclusive.cpp  thread_mgr.cpp  (+4 more)
src/libs/libserver/protobuf/: db.pb.cc  db.pb.h  msg.pb.cc  msg.pb.h  proto_id.pb.cc  proto_id.pb.h
src/libs/libserver/protobuf/08_01_system/src/libs/libserver/protobuf/: db.pb.cc  db.pb.h  proto_id.pb.cc  proto_id.pb.h
src/libs/libserver/protobuf/12_02_move/src/libs/libserver/protobuf/: db.pb.cc  db.pb.h  proto_id.pb.cc  proto_id.pb.h
src/tools/robots/: CMakeLists.txt  main.cpp  robot.cpp  robot_console_login.cpp  robot_state.cpp  robots.vcxproj
